# X-Action

./: .gitignore  CMakeLists.txt  README.md  actionX_RunTimeCompare.xlsx  main.cpp  mainPythonConversion.cpp  mainX-Action.cpp
docker/: Dockerfile
include/: imageActions.hpp
src/: imageActions.cpp
